tests/reference/asr-test_pow3-79749ed.stderr
style suggestion: Could have used '**' instead of 'pow'
 --> tests/errors/test_pow3.py:8:11
  |
8 |     print(pow(x, a))
  |           ^^^^^^^^^ '**' could be used instead

semantic error: Arguments do not match for any generic procedure, pow
 --> tests/errors/test_pow3.py:8:11
  |
8 |     print(pow(x, a))
  |           ^^^^^^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
